<resources>
    <string name="app_name">DogCat</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_nearme">Nearme</string>
    <string name="title_chat">Chat</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_home">HomeActivity</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="age">
        <item>ต่ำกว่า1ปี</item>
        <item>1-3ปี</item>
        <item>4-6ปี</item>
        <item>7ปีขึ้นไป</item>
    </string-array>

    <string-array name="province">
        <item>กรุงเทพมหานคร</item>
        <item>กระบี่</item>
        <item>กาญจนบุรี</item>
        <item>กาฬสินธุ์</item>
        <item>กำแพงเพชร</item>
        <item>ขอนแก่น</item>
        <item>จันทบุรี</item>
        <item>ฉะเชิงเทรา</item>
        <item>ชัยนาท</item>
        <item>ชัยภูมิ</item>
        <item>ชุมพร</item>
        <item>ชลบุรี</item>
        <item>เชียงใหม่</item>
        <item>เชียงราย</item>
        <item>ตรัง</item>
        <item>ตราด</item>
        <item>ตาก</item>
        <item>นครนายก</item>
        <item>นครปฐม</item>
        <item>นครพนม</item>
        <item>นครราชสีมา</item>
        <item>นครศรีธรรมราช </item>
        <item>นครสวรรค์</item>
        <item>นราธิวาส</item>
        <item>น่าน</item>
        <item>นนทบุรี</item>
        <item>บึงกาฬ</item>
        <item>บุรีรัมย์</item>
        <item>ประจวบคีรีขันธ์</item>
        <item>ปทุมธานี</item>
        <item>ปราจีนบุรี</item>
        <item>ปัตตานี</item>
        <item>พะเยา</item>
        <item>พระนครศรีอยุธยา</item>
        <item>พังงา</item>
        <item>พิจิตร</item>
        <item>พิษณุโลก</item>
        <item>เพชรบุรี</item>
        <item>เพชรบูรณ์</item>
        <item>แพร่</item>
        <item>พัทลุง</item>
        <item>ภูเก็ต</item>
        <item>มหาสารคาม</item>
        <item>มุกดาหาร</item>
        <item>แม่ฮ่องสอน</item>
        <item>ยโสธร</item>
        <item>ยะลา</item>
        <item>ร้อยเอ็ด</item>
        <item>ระนอง</item>
        <item>ระยอง</item>
        <item>ราชบุรี</item>
        <item>ลพบุรี</item>
        <item>ลำปาง</item>
        <item>ลำพูน</item>
        <item>เลย</item>
        <item>ศรีสะเกษ</item>
        <item>สกลนคร</item>
        <item>สงขลา</item>
        <item>สมุทรสาคร</item>
        <item>สมุทรปราการ</item>
        <item>สมุทรสงคราม</item>
        <item>สระแก้ว</item>
        <item>สระบุรี</item>
        <item>สิงห์บุรี</item>
        <item>สุโขทัย</item>
        <item>สุพรรณบุรี</item>
        <item>สุราษฎร์ธานี</item>
        <item>สุรินทร์</item>
        <item>สตูล</item>
        <item>หนองคาย</item>
        <item>หนองบัวลำภู</item>
        <item>อำนาจเจริญ</item>
        <item>อุดรธานี</item>
        <item>อุตรดิตถ์</item>
        <item>อุทัยธานี</item>
        <item>อุบลราชธานี</item>
        <item>อ่างทอง</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
